# search_random_file_and_pickup

./: .coverage  .gitignore  .pre-commit-config.yaml  BUILD.md  LICENSE  MediaFinder.spec  README.md  build_exe.bat  config.json  create_dice_gif.py  debug_config_flow.py  migrate_cache.py  pyproject.toml  quickstart.bat  quickstart.sh  random_file_picker.py  random_file_picker_gui.py  read_files_tracker.json  sequential_selector.py  setup.py  system_utils.py  system_utils_linux.py  tasks.py  test_collection_name_extraction.py  test_config_load.py  test_keywords.py  test_random_mode_bug.py  test_zip_sequence.py  validate_config.py  validate_config_complete.py
config/: config.example.json
docs/: BUG_FIX_REPORT.md  CACHE_OPTIMIZATION.md  COMMANDS.md  DOCUMENTATION.md  EXECUTAVEL.md  FFMPEG_INSTALL.md  KEYWORD_FILTER_TESTS.md  MIGRATION_GUIDE.md  MOVIE_POSTER_FEATURE.md  README_NEW.md  README_POETRY.md  SETUP_COMPLETE.md  TESTING.md  TMDB_IMPROVEMENTS.md  TMDB_SETUP.md  TROUBLESHOOTING.md  UNRAR.md  ZIP_SEQUENCE_ANALYSIS.md  tmdb_demo.py
src/random_file_picker/: __init__.py  cli.py
src/random_file_picker/core/: __init__.py  archive_extractor.py  cache_manager.py  config_manager.py  file_analyzer.py  file_loader.py  file_picker.py  sequential_selector.py  thumbnail_generator.py
src/random_file_picker/gui/: __init__.py  app.py  archive_extractor.py  config_manager.py  file_loader.py  thumbnail_generator.py
src/random_file_picker/utils/: __init__.py  movie_poster.py  system_utils.py  system_utils_windows.py
tests/: __init__.py  conftest.py
tests/unit/: test_archive_formats.py  test_bug_fix_final.py  test_file_picker.py  test_ignored_extensions.py  test_keyword_filtering.py  test_keyword_modes_sequential.py  test_keywords.py  test_movie_poster.py  test_sequence_bug.py  test_sequential_ignored_extensions.py  test_sequential_selector.py  test_thumbnail_extraction.py  test_thumbnail_sync_error.py  test_tmdb_improvements.py
