[tool.poetry]
name = "random-file-picker"
version = "2.0.0"
description = "Programa inteligente para seleção de arquivos com interface gráfica, suporte a sequencial/aleatório, cloud storage, e busca de capas de filmes"
authors = ["Seu Nome <seu.email@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/seu-usuario/random-file-picker"
repository = "https://github.com/seu-usuario/random-file-picker"
keywords = ["file-picker", "random", "sequential", "gui", "tkinter", "movies", "videos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment :: File Managers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "random_file_picker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.0.0"
rarfile = "^4.0"
pymupdf = "^1.23.0"
ffmpeg-python = "^0.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
random-file-picker = "random_file_picker.cli:main"
rfp-gui = "random_file_picker.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/random_file_picker",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-branch",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
